Bug 138234 - No visible cursor in document/table deleting/adding table rows with floating table toolbar under MacOS
Summary: No visible cursor in document/table deleting/adding table rows with floating ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha1+
Hardware: All macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Text-Cursor
  Show dependency treegraph
 
Reported: 2020-11-15 11:22 UTC by Telesto
Modified: 2025-11-09 09:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-11-15 11:22:53 UTC
Description:
No visible cursor in document/table deleting/adding table rows with floating table toolbar under MacOS

Steps to Reproduce:
1. Open Writer
2. Insert Table
3. Make table toolbar floating
4. Press add row in toolbar

Actual Results:
No cursor, everything working OK

Expected Results:
Cursor in document


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha1+
Build ID: c784b3da15102caf1022e83371863a86766e69cd
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 1 Roman Kuznetsov 2020-12-26 23:02:23 UTC
confirm in

Version: 7.2.0.0.alpha0+
Build ID: 4e63ec27b69fa01ff610c894c9fbf05c377a6179
CPU threads: 4; OS: Mac OS X 10.16; UI render: default; VCL: osx
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded
Comment 2 QA Administrators 2022-12-27 03:18:12 UTC Comment hidden (noise)
Comment 3 QA Administrators 2024-12-27 03:12:50 UTC Comment hidden (noise)
Comment 4 Commit Notification 2025-10-20 18:47:00 UTC
Neil Roberts committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ea8767fe503384eeabda0d008acf748086d8ef66

tdf#138234 Focus the frame before executing toolbar action

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.